# resweb

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  rust.yml
.github/workflows/: docker.yml  rust.yml
src/: auth.rs  cli.rs  cookie_auth.rs  error.rs  graphql_schema.rs  main.rs  option_condition.rs  site.rs
src/templates/: dashboard.html  index.html.hbs  mod.rs  style.css
templates/: dashboard.html
