[package]
name = "resweb"
version = "0.1.0"
authors = ["Pachler, Uwe <uwe.pachler@datagroup.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = {version="0.2.25", features=["full"]}
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
actix-session = "0.4.1"
actix-files = "0.5.0"
get_if_addrs = "0.5.3"
serde = "1.0.124"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
alcoholic_jwt = "1.0.0"
juniper = "0.15"
juniper_actix = "0.2"
http = "0.2.3"
handlebars = {version="3.5.4", features=["dir_source"]}
url = "2.2.1"
