[package]
name = "resweb"
version = "0.2.1"
authors = ["Pachler, Uwe <uwe.pachler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = {version="0.2.25", features=["full"]}
actix-web = {version="3.3.2", features=["rustls"]}
actix-web-httpauth = "0.5.0"
actix-session = "0.4.1"
actix-files = "0.5.0"
get_if_addrs = "0.5.3"
serde = "1.0.124"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
serde_regex = "1.1"
regex = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
alcoholic_jwt = "1.0"
juniper = "0.15"
juniper_actix = "0.2"
http = "0.2.3"
handlebars = {version="4.1.0", features=["dir_source"]}
url = "2.2.1"
